[gd_scene load_steps=4 format=2]

[ext_resource path="res://Asstes/Environment/Circle.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Other/HealingArea.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0713

[node name="HealingArea" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.835294, 0.835294, 0.835294, 1 )
scale = Vector2( 3.25, 3.375 )
texture = ExtResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 250
lifetime = 2.0
emission_shape = 1
emission_sphere_radius = 25.98
direction = Vector2( 0, -1 )
spread = 8.45
gravity = Vector2( 0, 0 )
initial_velocity = 16.0
color = Color( 0.0705882, 0.945098, 0.0352941, 1 )

[node name="HealTickTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AliveTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_HealingArea_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_HealingArea_area_exited"]
[connection signal="timeout" from="HealTickTimer" to="." method="_on_HealTickTimer_timeout"]
[connection signal="timeout" from="AliveTimer" to="." method="_on_AliveTimer_timeout"]
